srcs/deployments/ftps_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps
        imagePullPolicy: Never
        livenessProbe:
          exec:
            command:
            - /bin/ash
            - -c
            - 'pgrep telegraf'
          initialDelaySeconds: 10
          periodSeconds: 5
