srcs/deployments/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx_alpine
        imagePullPolicy: Never
        name: nginx
        livenessProbe:
          exec:
            command:
            - /bin/ash
            - -c
            - 'ps | grep telegraf && ps | grep sshd'
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        - containerPort: 22
          name: ssh
