srcs/deployments/phpmyadmin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: frontend
    spec:
      containers:
      - image: phpmyadmin
        imagePullPolicy: Never
        name: phpmyadmin
        ports:
        - containerPort: 5000
          name: phpmyadmin
        livenessProbe:
          exec:
            command:
            - /bin/ash
            - -c
            - 'pgrep telegraf'
          initialDelaySeconds: 10
          periodSeconds: 5
