srcs/deployments/telegraf_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      serviceAccountName: telegraf-account
      containers:
        - image: telegraf_alpine
          name: telegraf
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: telegraf-config
              subPath: telegraf.conf
              readOnly: true
      volumes:
        - name: telegraf-config
          configMap:
            name: telegraf-config
