srcs/deployments/nginx_setup.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx_alpine
        imagePullPolicy: Never
        name: nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        - containerPort: 4000
          name: ssh
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      nodePort: 80
      targetPort: 80
    - name: https
      port: 443
